# cmake-starter-template

./: CMakeLists.txt  README.md  main.cpp
include/: first.h  third.h
src/: first.cpp  third.cpp
